@@ -1337,17 +1337,6 @@ void WebViewImpl::dragSourceEndedAt(
         static_cast<DragOperation>(operation));
 }
 
-void WebViewImpl::dragSourceMovedTo(
-    const WebPoint& clientPoint,
-    const WebPoint& screenPoint)
-{
-    PlatformMouseEvent pme(clientPoint,
-                           screenPoint,
-                           LeftButton, MouseEventMoved, 0, false, false, false,
-                           false, 0);
-    m_page->mainFrame()->eventHandler()->dragSourceMovedTo(pme);
-}
-
 void WebViewImpl::dragSourceSystemDragEnded()
 {
     // It's possible for us to get this callback while not doing a drag if
