@@ -1,3 +1,14 @@
+2009-11-11  Nate Chapin  <japhet@chromium.org>
+
+        Reviewed by Dimitri Glazkov.
+
+        Remove WebViewImpl::dragSourceMovedTo(), as it is no longer
+        needed after http://trac.webkit.org/changeset/50786.
+
+        https://bugs.webkit.org/show_bug.cgi?id=31354
+
+        * src/WebViewImpl.cpp:
+
 2009-11-10  Nate Chapin  <japhet@chromium.org>
 
         Unreviewed, Chromium build fix for http://trac.webkit.org/changeset/50760.
